G1.1 — Extract SkDevice interface from SkBitmapDevice (#460)
Refactor pur, zéro changement de comportement. Le constructeur de
SkCanvas accepte maintenant un SkDevice (interface) à la place du
SkBitmapDevice concret, ce qui ouvre la porte au SkWebGpuDevice de
G1.2.

Interface SkDevice (org.skia.core, 7 méthodes) : width, height,
deviceClipBounds, drawRect, drawPaint, drawPath, drawImageRect.
SkBitmapDevice implements SkDevice — méthodes correspondantes
taguées override, le reste de l'API (compositeFrom, setActiveClip*,
drawColoredTriangle, drawTexturedTriangle, bitmap accessor) reste
spécifique au backend raster.

SkCanvas :
- ctor primaire prend SkDevice
- storage public `device: SkDevice`
- State.device et Layer.parentDevice : SkDevice (resp. SkBitmapDevice
  pour Layer puisque la composition layer est raster-only par
  construction)
- Helper top-level `SkDevice.requireBitmap(op)` qui cast vers
  SkBitmapDevice avec une erreur claire si un non-raster device
  flowe — 7 call sites (bitmap accessor, restore-imageFilter,
  restore-composite, bindClip, drawVertices texturée/colorée,
  saveLayer parent/backdrop/Layer).

Restauré include(":gpu-raster") dans settings.gradle.kts — la ligne
avait été dropped au squash-merge de G1.0 (PR #458), laissant le
module en dead-code.

Vérifications :
- ./gradlew :kanvas-skia:test :cpu-raster:test :gpu-raster:test
  PASS — 0 régression sur les suites raster (10 min, 4000+ tests),
  ClearRedTest GPU toujours vert.
- Compile sans warning nouveau.

Co-authored-by: Claude Opus 4.7 <noreply@anthropic.com>